[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Worlds/Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Entities/Player.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Respawn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -64, 288 ), Vector2( -64, 288 ), Vector2( 256, 288 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player:velocity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -600 ) ]
}

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="ui_layer" type="CanvasLayer" parent="."]

[node name="UI" parent="ui_layer" instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 256, 288 )
velocity = Vector2( 0, -600 )

[node name="scene" type="AnimationPlayer" parent="."]

[node name="player_respawn_control" type="AnimationPlayer" parent="."]
anims/Respawn = SubResource( 1 )
[connection signal="life_change" from="Player" to="ui_layer/UI" method="_on_Player_life_change"]
[connection signal="life_change" from="Player" to="." method="_on_Player_life_change"]
